--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -163,4 +163,14 @@
     background-color:#e25800;
 }
 
+.card {
+	margin-bottom: 15px;
+	width: 270px;
+	height: 460px;
+	margin-top: 10px;
+}
 
+.product-image {
+		width: 300px;
+		height: 300px;
+}
