--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -47,8 +47,8 @@
   
   
 footer {
-    background-color: #ccc;
-    color: #333;
+    background-color: #333;
+    color: whitesmoke;
     padding: 20px;
     text-align: center;
   }
