--- a/src/main/webapp/css/styleIndex.css
+++ b/src/main/webapp/css/styleIndex.css
@@ -7,7 +7,8 @@
     text-decoration: none;
 }
 header{
-    position: fixed;
+    position: sticky;
+    background-color:#2c2c2c;
     width: 100%;
     top: 0;
     right: 0;
@@ -15,7 +16,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 30px 8%;
+    padding-left: 30px 8%; 
 }
 #menu-icon{
     font-size: 35px;
