--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,13 +1,16 @@
   
   input[type="email"], input[type="password"] {
-    display: block;
+    display: inline;
     width: 100%;
     padding: 10px;
-    border: 2px solid #ccc;
+    border: 2px solid green;
     border-radius: 4px;
     margin-bottom: 20px;
-    font-size: 16px;
+    font-size: 13px;
+    background-color: #808080;
   }
+  
+  
   
   button[type="submit"] {
     background-color: #4CAF50;
@@ -120,7 +123,6 @@ footer {
     height: 100vh;
 	background-position: center;
     background-size: cover;
-    /*display: grid;*/
     grid-template-columns: repeat(1, 1fr);
     align-items: center;
 	
@@ -129,7 +131,7 @@ footer {
 .signupSection{
 	width: 100%;
 	color:white;
-	padding-top:150px;
+	padding-top:30px;
 	background-image: url(../images/background.png);
     height: 100vh;
 	background-position: center;
@@ -162,7 +164,6 @@ footer {
     height: 100vh;
 	background-position: center;
     background-size: cover;
-    display: grid;
     grid-template-columns: repeat(1, 1fr);
     align-items: center;	
 }
@@ -206,6 +207,37 @@ footer {
 #accountList{
 	display:inline;
 }
+
+#loginDiv{
+	width:40%;
+	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+}
+
+#signupDiv{
+	padding-top:460px;
+	width:50%;
+	position: absolute;
+  	top: 40%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+}
+
+
+.inputField {
+	display: inline;
+    width: 100%;
+    padding: 5px;
+    border: 2px solid green;
+    border-radius: 4px;
+    margin-bottom: 5px;
+    font-size: 13px;
+    background-color: #808080;
+  
+}
+
 
 
 
