--- a/src/main/webapp/css/styleIndex.css
+++ b/src/main/webapp/css/styleIndex.css
@@ -121,6 +121,11 @@ section{
     background-color: #212121;
 }
 
+
+.text p{
+	font-size: 18px;
+}
+
 /* Responsive-desing */
 @media(max-width:920px){
     header{
